--- a/openchrom/plugins/net.chemclipse.chromatogram.msd.identifier.supplier.cdk/build.properties
+++ b/openchrom/plugins/net.chemclipse.chromatogram.msd.identifier.supplier.cdk/build.properties
@@ -3,4 +3,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               plugin.xml
+               plugin.xml,\
+               libraries/cdk-1.4.19.jar
