--- a/openchrom/plugins/net.chemclipse.chromatogram.fid.converter.supplier.cdf/plugin.xml
+++ b/openchrom/plugins/net.chemclipse.chromatogram.fid.converter.supplier.cdf/plugin.xml
@@ -4,13 +4,13 @@
    <extension
          point="net.chemclipse.chromatogram.fid.converter.chromatogramSupplier">
       <ChromatogramSupplier
-            description="Reads an writes ANDI/AIA CDF Chromatograms."
+            description="Reads ANDI/AIA CDF Chromatograms."
             exportConverter="net.chemclipse.chromatogram.fid.converter.supplier.cdf.converter.CDFChromatogramExportConverter"
             fileExtension=".CDF"
             filterName="ANDI/AIA CDF Chromatogram (*.CDF)"
             id="net.chemclipse.chromatogram.fid.converter.supplier.cdf"
             importConverter="net.chemclipse.chromatogram.fid.converter.supplier.cdf.converter.CDFChromatogramImportConverter"
-            isExportable="true"
+            isExportable="false"
             isImportable="true">
       </ChromatogramSupplier>
    </extension>
