The converter and model packages have been renamed. The term chromatogram has been removed. Not every mass selective detector is coupled to a GC for instance. This was a neccessary step to make OpenChrom more flexible.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.pdf.ui/bin/
-openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.pdf.ui.fragment.test/bin/
-openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.pdf/bin/
-openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.pdf.fragment.test/bin/
-openchrom/sites/net.openchrom.chromatogram.msd.converter.supplier.pdf.updateSite/artifacts.jar
-openchrom/sites/net.openchrom.chromatogram.msd.converter.supplier.pdf.updateSite/content.jar
-openchrom/sites/net.openchrom.chromatogram.msd.converter.supplier.pdf.updateSite/features/
-openchrom/sites/net.openchrom.chromatogram.msd.converter.supplier.pdf.updateSite/plugins/
-openchrom/features/net.openchrom.chromatogram.msd.converter.supplier.pdf.feature/target/
-openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.pdf.ui/target/
-openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.pdf/target/
-openchrom/sites/net.openchrom.chromatogram.msd.converter.supplier.pdf.updateSite/target/
+openchrom/plugins/net.openchrom.msd.converter.supplier.pdf.ui/bin/
+openchrom/plugins/net.openchrom.msd.converter.supplier.pdf.ui.fragment.test/bin/
+openchrom/plugins/net.openchrom.msd.converter.supplier.pdf/bin/
+openchrom/plugins/net.openchrom.msd.converter.supplier.pdf.fragment.test/bin/
+openchrom/sites/net.openchrom.msd.converter.supplier.pdf.updateSite/artifacts.jar
+openchrom/sites/net.openchrom.msd.converter.supplier.pdf.updateSite/content.jar
+openchrom/sites/net.openchrom.msd.converter.supplier.pdf.updateSite/features/
+openchrom/sites/net.openchrom.msd.converter.supplier.pdf.updateSite/plugins/
+openchrom/features/net.openchrom.msd.converter.supplier.pdf.feature/target/
+openchrom/plugins/net.openchrom.msd.converter.supplier.pdf.ui/target/
+openchrom/plugins/net.openchrom.msd.converter.supplier.pdf/target/
+openchrom/sites/net.openchrom.msd.converter.supplier.pdf.updateSite/target/
