The base folder has been renamed to chemclipse.

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
-openchrom/plugins/net.chemclipse.fid.converter.supplier.cdf.fragment.test/chemclipse.log
-openchrom/plugins/net.chemclipse.fid.converter.supplier.cdf.fragment.test/*.log
-openchrom/plugins/net.chemclipse.fid.converter.supplier.cdf.fragment.test/bin/*
-openchrom/plugins/net.chemclipse.fid.converter.supplier.cdf.ui/bin/*
-openchrom/plugins/net.chemclipse.fid.converter.supplier.cdf/bin/*
-openchrom/plugins/net.chemclipse.fid.converter.supplier.cdf.ui.fragment.test/bin/*
-openchrom/sites/net.chemclipse.fid.converter.supplier.cdf.updateSite/artifacts.jar
-openchrom/sites/net.chemclipse.fid.converter.supplier.cdf.updateSite/content.jar
-openchrom/sites/net.chemclipse.fid.converter.supplier.cdf.updateSite/features/*
-openchrom/sites/net.chemclipse.fid.converter.supplier.cdf.updateSite/plugins/*
-openchrom/features/net.chemclipse.fid.converter.supplier.cdf.feature/target/
-openchrom/plugins/net.chemclipse.fid.converter.supplier.cdf.ui/target/
-openchrom/plugins/net.chemclipse.fid.converter.supplier.cdf/target/
-openchrom/sites/net.chemclipse.fid.converter.supplier.cdf.updateSite/target/
+chemclipse/plugins/net.chemclipse.fid.converter.supplier.cdf.fragment.test/chemclipse.log
+chemclipse/plugins/net.chemclipse.fid.converter.supplier.cdf.fragment.test/*.log
+chemclipse/plugins/net.chemclipse.fid.converter.supplier.cdf.fragment.test/bin/*
+chemclipse/plugins/net.chemclipse.fid.converter.supplier.cdf.ui/bin/*
+chemclipse/plugins/net.chemclipse.fid.converter.supplier.cdf/bin/*
+chemclipse/plugins/net.chemclipse.fid.converter.supplier.cdf.ui.fragment.test/bin/*
+chemclipse/sites/net.chemclipse.fid.converter.supplier.cdf.updateSite/artifacts.jar
+chemclipse/sites/net.chemclipse.fid.converter.supplier.cdf.updateSite/content.jar
+chemclipse/sites/net.chemclipse.fid.converter.supplier.cdf.updateSite/features/*
+chemclipse/sites/net.chemclipse.fid.converter.supplier.cdf.updateSite/plugins/*
+chemclipse/features/net.chemclipse.fid.converter.supplier.cdf.feature/target/
+chemclipse/plugins/net.chemclipse.fid.converter.supplier.cdf.ui/target/
+chemclipse/plugins/net.chemclipse.fid.converter.supplier.cdf/target/
+chemclipse/sites/net.chemclipse.fid.converter.supplier.cdf.updateSite/target/
