The ChemClipse base has been edited. This are preparations for the upcoming submission as a Eclipse Foundation proposal.

--- a/openchrom/cbi/net.openchrom.msd.converter.supplier.pdf.cbi/pom.xml
+++ b/openchrom/cbi/net.openchrom.msd.converter.supplier.pdf.cbi/pom.xml
@@ -39,7 +39,7 @@
     <developer>
       <id>eselmeister</id>
       <name>Philip Wenig</name>
-      <email>philip.wenig [at] gmx.net</email>
+      <email>philip.wenig [at] openchrom.net</email>
       <timezone>+1</timezone>
       <roles>
         <role>Developer</role>
