--- a/chemclipse/plugins/net.chemclipse.chromatogram.msd.identifier.supplier.cdk/plugin.xml
+++ b/chemclipse/plugins/net.chemclipse.chromatogram.msd.identifier.supplier.cdk/plugin.xml
@@ -10,5 +10,10 @@
             identifierName="SMILES Peak Identifier">
       </PeakIdentificationSupplier>
    </extension>
-
+   <extension
+         point="org.eclipse.core.runtime.preferences">
+      <initializer
+            class="net.chemclipse.chromatogram.msd.identifier.supplier.cdk.preferences.PreferenceInitializer">
+      </initializer>
+   </extension>
 </plugin>
