The second branch of plugins has been refactored.

--- a/chemclipse/plugins/net.chemclipse.msd.converter.supplier.cdf/plugin.xml
+++ b/chemclipse/plugins/net.chemclipse.msd.converter.supplier.cdf/plugin.xml
@@ -14,5 +14,10 @@
             isImportable="true">
       </ChromatogramSupplier>
    </extension>
-
+   <extension
+         point="org.eclipse.core.runtime.preferences">
+      <initializer
+            class="net.chemclipse.msd.converter.supplier.cdf.preferences.PreferenceInitializer">
+      </initializer>
+   </extension>
 </plugin>
