The preference settings have been refactored - part 5.

--- a/openchrom/plugins/net.openchrom.msd.converter.supplier.pdf.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.msd.converter.supplier.pdf.ui/plugin.xml
@@ -5,16 +5,10 @@
          point="org.eclipse.ui.preferencePages">
       <page
             category="net.chemclipse.msd.converter.ui.converterPreferencePage"
-            class="net.openchrom.msd.converter.supplier.pdf.ui.preferences.ConverterPreferencePage"
+            class="net.openchrom.msd.converter.supplier.pdf.ui.preferences.PreferencePage"
             id="net.openchrom.msd.converter.supplier.pdf.ui.preferences.converterPreferencePage"
             name="PDF Chromatogram MS Converter">
       </page>
-   </extension>
-   <extension
-         point="org.eclipse.core.runtime.preferences">
-      <initializer
-            class="net.openchrom.msd.converter.supplier.pdf.ui.preferences.PreferenceInitializer">
-      </initializer>
    </extension>
 
 </plugin>
