The ChemClipse packages have been renamed from net.chemclipse to org.eclipse.chemclipse.

--- a/openchrom/plugins/net.openchrom.msd.converter.supplier.pdf.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.msd.converter.supplier.pdf.ui/plugin.xml
@@ -4,7 +4,7 @@
    <extension
          point="org.eclipse.ui.preferencePages">
       <page
-            category="net.chemclipse.msd.converter.ui.converterPreferencePage"
+            category="org.eclipse.chemclipse.msd.converter.ui.converterPreferencePage"
             class="net.openchrom.msd.converter.supplier.pdf.ui.preferences.PreferencePage"
             id="net.openchrom.msd.converter.supplier.pdf.ui.preferences.converterPreferencePage"
             name="PDF Chromatogram MS Converter">
