--- a/chemclipse/plugins/net.openchrom.chromatogram.msd.identifier.supplier.cdk.ui/plugin.xml
+++ b/chemclipse/plugins/net.openchrom.chromatogram.msd.identifier.supplier.cdk.ui/plugin.xml
@@ -2,7 +2,7 @@
 <?eclipse version="3.4"?>
 <plugin>
    <extension
-         id="org.eclipse.chemclipse.chromatogram.msd.identifier.supplier.cdk.ui.modelContribution"
+         id="net.openchrom.chromatogram.msd.identifier.supplier.cdk.ui.modelContribution"
          point="org.eclipse.e4.workbench.model">
       <fragment
             uri="fragment.e4xmi">
@@ -13,7 +13,7 @@
       <page
             category="org.eclipse.chemclipse.chromatogram.msd.identifier.ui.preferences.identifierPreferencePage"
             class="net.openchrom.chromatogram.msd.identifier.supplier.cdk.ui.preferences.PreferencePage"
-            id="org.eclipse.chemclipse.chromatogram.msd.identifier.supplier.cdk.ui.preferences.preferencePage"
+            id="net.openchrom.chromatogram.msd.identifier.supplier.cdk.ui.preferences.preferencePage"
             name="CDK Identifier Support">
       </page>
    </extension>
