--- a/openchrom/pom.xml
+++ b/openchrom/pom.xml
@@ -122,6 +122,16 @@
     <plugins>
       <plugin>
         <groupId>${tycho.groupid}</groupId>
+        <artifactId>tycho-packaging-plugin</artifactId>
+        <version>${tycho-version}</version>
+        <configuration>
+          <archive>
+            <addMavenDescriptor>false</addMavenDescriptor>
+          </archive>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>${tycho.groupid}</groupId>
         <artifactId>tycho-maven-plugin</artifactId>
         <version>${tycho.version}</version>
         <extensions>true</extensions>
