--- a/openchrom/cbi/net.openchrom.msqbatlibs.cbi/.project
+++ b/openchrom/cbi/net.openchrom.msqbatlibs.cbi/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>net.openchrom.msqbatlibs.jmgf.cbi</name>
+	<name>net.openchrom.msqbatlibs.cbi</name>
 	<comment></comment>
 	<projects>
 	</projects>
