--- a/openchrom/cbi/net.openchrom.msqbatlibs.cbi/pom.xml
+++ b/openchrom/cbi/net.openchrom.msqbatlibs.cbi/pom.xml
@@ -59,13 +59,11 @@
 	MODULES
   -->
   <modules>
-    <module>../../plugins/net.openchrom.msqbatlibs.bioutils.protemics</module>
-    <module>../../plugins/net.openchrom.msqbatlibs.bioutils.protemics.fragment.test</module>
-   	<module>../../plugins/net.openchrom.msqbatlibs.jfasta</module>
-   	<module>../../plugins/net.openchrom.msqbatlibs.jfasta.fragment.test</module>
+    <module>../../plugins/net.openchrom.msqbatlibs.bioutils.proteomics</module>
+    <module>../../plugins/net.openchrom.msqbatlibs.bioutils.proteomics.fragment.test</module>
    	<module>../../plugins/net.openchrom.msqbatlibs.jmgf</module>
    	<module>../../plugins/net.openchrom.msqbatlibs.jmgf.fragment.test</module>
-   	<module>../../plugins/net.openchrom.msqbatlibs.jmgf.feature</module>
+   	<module>../../features/net.openchrom.msqbatlibs.feature</module>
    	<module>../../plugins/net.openchrom.msqbatlibs.jranges</module>
    	<module>../../plugins/net.openchrom.msqbatlibs.jranges.fragment.test</module>
    	<module>../../plugins/net.openchrom.msqbatlibs.jfasta</module>
