--- a/openchrom/features/net.openchrom.msqbatlibs.feature/.project
+++ b/openchrom/features/net.openchrom.msqbatlibs.feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>net.openchrom.msqbatlibs.jmgf.feature</name>
+	<name>net.openchrom.msqbatlibs.feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
