--- a/openchrom/features/net.openchrom.msqbatlibs.feature/pom.xml
+++ b/openchrom/features/net.openchrom.msqbatlibs.feature/pom.xml
@@ -4,12 +4,12 @@
 
   <parent>
     <groupId>net.openchrom</groupId>
-    <artifactId>net.openchrom.plugins.parent</artifactId>
+    <artifactId>net.openchrom.features.parent</artifactId>
     <version>BUILD-VERSION</version>
   </parent>
 
-  <artifactId>net.openchrom.msqbatlibs.jmgf.feature</artifactId>
-  <packaging>eclipse-plugin</packaging>
+  <artifactId>net.openchrom.msqbatlibs.feature</artifactId>
+  <packaging>eclipse-feature</packaging>
   <version>1.1.0-SNAPSHOT</version>
   
 </project>
