--- a/openchrom/cbi/net.openchrom.msqbatlibs.cbi/pom.xml
+++ b/openchrom/cbi/net.openchrom.msqbatlibs.cbi/pom.xml
@@ -1,80 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project>
-  <modelVersion>4.0.0</modelVersion>
-  <!--
-	PARENT
-  -->
-  <parent>
-    <groupId>net.openchrom</groupId>
-    <artifactId>master</artifactId>
-    <version>BUILD-VERSION</version>
-    <relativePath>../../pom.xml</relativePath>
-  </parent>
-  <!--
-	ARTIFACT
-  -->
-  <groupId>net.openchrom</groupId>
-  <artifactId>parent</artifactId>
-  <packaging>pom</packaging>
-  <!--
-	DESCRIPTION
-  --> 
-  <name></name>
-  <description>
+	<modelVersion>4.0.0</modelVersion>
+	<!-- PARENT -->
+	<parent>
+		<groupId>net.openchrom</groupId>
+		<artifactId>master</artifactId>
+		<version>BUILD-VERSION</version>
+		<relativePath>../../pom.xml</relativePath>
+	</parent>
+	<!-- ARTIFACT -->
+	<groupId>net.openchrom</groupId>
+	<artifactId>parent</artifactId>
+	<packaging>pom</packaging>
+	<!-- DESCRIPTION -->
+	<name></name>
+	<description>
 	
   </description>
-  <!--
-	LICENSES
-  -->
-  <licenses>
-    <license>
-      <name>EPL v1.0</name>
-      <url>http://www.eclipse.org/legal/epl-v10.html</url>
-    </license> 
-  </licenses>
-  <!--
-	DEVELOPERS
-  -->
-  <developers>
-    <developer>
-      <id>eselmeister</id>
-      <name>Philip Wenig</name>
-      <email>philip.wenig [at] openchrom.net</email>
-      <timezone>+1</timezone>
-      <roles>
-        <role>Developer</role>
-      </roles>
-    </developer>
-    <developer>
-      <id>kerner</id>
-      <name>Alexander Kerner</name>
-      <email>alexander.kerner [at] openchrom.net</email>
-      <timezone>+1</timezone>
-      <roles>
-        <role>Developer</role>
-      </roles>
-    </developer>
-  </developers>
-  <!--
-	MODULES
-  -->
-  <modules>
-    <module>../../plugins/net.openchrom.msqbatlibs.bioutils.proteomics</module>
-    <module>../../plugins/net.openchrom.msqbatlibs.bioutils.proteomics.fragment.test</module>
-    <module>../../plugins/net.openchrom.msqbatlibs.jmgf</module>
-    <module>../../plugins/net.openchrom.msqbatlibs.jmgf.fragment.test</module>
-    <module>../../features/net.openchrom.msqbatlibs.feature</module>
-    <module>../../plugins/net.openchrom.msqbatlibs.jranges</module>
-    <module>../../plugins/net.openchrom.msqbatlibs.jranges.fragment.test</module>
-    <module>../../plugins/net.openchrom.msqbatlibs.jfasta</module>
-    <module>../../plugins/net.openchrom.msqbatlibs.jfasta.fragment.test</module>
-    <module>../../plugins/net.openchrom.msqbatlibs.jtables</module>
-    <module>../../plugins/net.openchrom.msqbatlibs.jtables.fragment.test</module>
-    <module>../../plugins/net.openchrom.msqbatlibs.kerner.utils</module>
-    <module>../../plugins/net.openchrom.msqbatlibs.kerner.utils.fragment.test</module>
-    <module>../../plugins/net.openchrom.msqbatlibs.kerner.utils.collections</module>
-    <module>../../plugins/net.openchrom.msqbatlibs.kerner.utils.collections.fragment.test</module>
-    <module>../../plugins/net.openchrom.msqbatlibs.kerner.utils.io</module>
-    <module>../../plugins/net.openchrom.msqbatlibs.kerner.utils.io.fragment.test</module>
-  </modules>
+	<!-- LICENSES -->
+	<licenses>
+		<license>
+			<name>EPL v1.0</name>
+			<url>http://www.eclipse.org/legal/epl-v10.html</url>
+		</license>
+	</licenses>
+	<!-- DEVELOPERS -->
+	<developers>
+		<developer>
+			<id>eselmeister</id>
+			<name>Philip Wenig</name>
+			<email>philip.wenig [at] openchrom.net</email>
+			<timezone>+1</timezone>
+			<roles>
+				<role>Developer</role>
+			</roles>
+		</developer>
+		<developer>
+			<id>kerner</id>
+			<name>Alexander Kerner</name>
+			<email>alexander.kerner [at] openchrom.net</email>
+			<timezone>+1</timezone>
+			<roles>
+				<role>Developer</role>
+			</roles>
+		</developer>
+	</developers>
+	<!-- MODULES -->
+	<modules>
+		<module>../../plugins/net.openchrom.msqbatlibs.bioutils.proteomics</module>
+		<module>../../plugins/net.openchrom.msqbatlibs.bioutils.proteomics.fragment.test</module>
+		<module>../../plugins/net.openchrom.msqbatlibs.jmgf</module>
+		<module>../../plugins/net.openchrom.msqbatlibs.jmgf.fragment.test</module>
+		<module>../../features/net.openchrom.msqbatlibs.feature</module>
+		<module>../../plugins/net.openchrom.msqbatlibs.jranges</module>
+		<module>../../plugins/net.openchrom.msqbatlibs.jranges.fragment.test</module>
+		<module>../../plugins/net.openchrom.msqbatlibs.jfasta</module>
+		<module>../../plugins/net.openchrom.msqbatlibs.jfasta.fragment.test</module>
+		<module>../../plugins/net.openchrom.msqbatlibs.jtables</module>
+		<module>../../plugins/net.openchrom.msqbatlibs.jtables.fragment.test</module>
+		<module>../../plugins/net.openchrom.msqbatlibs.kerner.utils</module>
+		<module>../../features/net.openchrom.msqbatlibs.kerner.utils.feature</module>
+		<module>../../plugins/net.openchrom.msqbatlibs.kerner.utils.fragment.test</module>
+		<module>../../plugins/net.openchrom.msqbatlibs.kerner.utils.collections</module>
+		<module>../../plugins/net.openchrom.msqbatlibs.kerner.utils.collections.fragment.test</module>
+		<module>../../plugins/net.openchrom.msqbatlibs.kerner.utils.io</module>
+		<module>../../plugins/net.openchrom.msqbatlibs.kerner.utils.io.fragment.test</module>
+	</modules>
 </project>
