--- a/openchrom/plugins/net.openchrom.msqbatlibs.kerner.utils.io.fragment.test/pom.xml
+++ b/openchrom/plugins/net.openchrom.msqbatlibs.kerner.utils.io.fragment.test/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>net.openchrom.msqbatlibs.kerner.utils.io.fragment.test</artifactId>
-  <packaging>eclipse-plugin</packaging>
+  <packaging>eclipse-test-plugin</packaging>
   <version>1.1.0-SNAPSHOT</version>
   
 </project>
