[tycho] Add repository
Add p2-maven.silico-sciences.com repository to provide Maven-build SLF4J
API/ implementation.

--- a/openchrom/pom.xml
+++ b/openchrom/pom.xml
@@ -118,6 +118,11 @@
       <url>${easejython-repo.url}</url>
       <layout>p2</layout>
     </repository>
+	<repository>
+      <id>p2-maven</id>
+      <url>http://p2-maven.silico-sciences.com</url>
+      <layout>p2</layout>
+    </repository>
   </repositories>
   <!--
 	PLUGIN REPOSITORIES
