The comparator functionality has been extended by a direct match.-

--- a/openchrom/plugins/net.openchrom.chromatogram.msd.comparison.supplier.pbm/plugin.xml
+++ b/openchrom/plugins/net.openchrom.chromatogram.msd.comparison.supplier.pbm/plugin.xml
@@ -7,7 +7,7 @@
             comparatorName="PBM"
             description="This comparator calculates the similarity between two mass spectra with the pbm algorithm."
             id="net.openchrom.chromatogram.msd.comparison.supplier.pbm"
-            massSpectrumComparator="net.openchrom.chromatogram.msd.comparison.supplier.pbm.comparator.PBMMassSpectrumComparator">
+            massSpectrumComparator="net.openchrom.chromatogram.msd.comparison.supplier.pbm.comparator.MassSpectrumComparator">
       </ComparisonSupplier>
    </extension>
 
