--- a/chemclipse/plugins/net.openchrom.chromatogram.msd.identifier.supplier.cdk/plugin.xml
+++ b/chemclipse/plugins/net.openchrom.chromatogram.msd.identifier.supplier.cdk/plugin.xml
@@ -2,18 +2,18 @@
 <?eclipse version="3.4"?>
 <plugin>
    <extension
-         point="org.eclipse.chemclipse.chromatogram.msd.identifier.peakIdentifier">
-      <PeakIdentificationSupplier
-            description="This identifier calculates a SMILES formula for each peak identification entry."
+         point="org.eclipse.chemclipse.chromatogram.msd.identifier.chromatogramIdentifier">
+      <ChromatogramIdentificationSupplier
+            description="This identifier calculates a SMILES formula for each identification entry."
             id="net.openchrom.chromatogram.msd.identifier.supplier.cdk"
-            identifier="net.openchrom.chromatogram.msd.identifier.supplier.cdk.core.PeakIdentifier"
-            identifierName="SMILES Peak Identifier">
-      </PeakIdentificationSupplier>
+            identifier="net.openchrom.chromatogram.msd.identifier.supplier.cdk.core.ChromatogramIdentifier"
+            identifierName="SMILES Identifier">
+      </ChromatogramIdentificationSupplier>
    </extension>
    <extension
          point="org.eclipse.core.runtime.preferences">
       <initializer
             class="net.openchrom.chromatogram.msd.identifier.supplier.cdk.preferences.PreferenceInitializer">
       </initializer>
-   </extension>
+   </extension>   
 </plugin>
