--- a/openchrom/plugins/net.openchrom.msd.converter.supplier.mgf/plugin.xml
+++ b/openchrom/plugins/net.openchrom.msd.converter.supplier.mgf/plugin.xml
@@ -23,6 +23,7 @@
             filterName="MGF Chromatogram (*.mgf)"
             id="net.openchrom.msd.converter.supplier.mgf"
             importConverter="net.openchrom.msd.converter.supplier.mgf.converter.ChromatogramImportConverter"
+            importMagicNumberMatcher="net.openchrom.msd.converter.supplier.mgf.converter.MagicNumberMatcher"
             isExportable="true"
             isImportable="false">
       </ChromatogramSupplier>
