The chromatogram import converter handling has been improved.

--- a/openchrom/plugins/net.openchrom.msd.converter.supplier.pdf/plugin.xml
+++ b/openchrom/plugins/net.openchrom.msd.converter.supplier.pdf/plugin.xml
@@ -10,6 +10,7 @@
             filterName="PDF Chromatogram (*.pdf)"
             id="net.openchrom.msd.converter.supplier.pdf"
             importConverter="net.openchrom.msd.converter.supplier.pdf.converter.ChromatogramImportConverter"
+            importMagicNumberMatcher="net.openchrom.msd.converter.supplier.pdf.converter.MagicNumberMatcher"
             isExportable="true"
             isImportable="false">
       </ChromatogramSupplier>
