The header info has been updated.

--- a/openchrom/cbi/net.openchrom.msd.converter.supplier.pdf.cbi/pom.xml
+++ b/openchrom/cbi/net.openchrom.msd.converter.supplier.pdf.cbi/pom.xml
@@ -29,7 +29,7 @@
   -->
   <licenses>
     <license>
-      <name>Proprietary: Copyright by Philip (eselmeister) Wenig</name>
+      <name>Proprietary: Copyright by Dr. Philip Wenig</name>
     </license> 
   </licenses>
   <!--
