--- a/openchrom/cbi/net.openchrom.chromatogram.msd.comparison.supplier.pbm.cbi/pom.xml
+++ b/openchrom/cbi/net.openchrom.chromatogram.msd.comparison.supplier.pbm.cbi/pom.xml
@@ -29,8 +29,8 @@
   -->
   <licenses>
     <license>
-      <name>Proprietary</name>
-      <url>http://www.openchrom.net</url>
+      <name>EPL v1.0</name>
+      <url>http://www.eclipse.org/legal/epl-v10.html</url>
     </license> 
   </licenses>
   <!--
