A demo CMS calibration view has been added.

--- a/openchrom/plugins/net.openchrom.msd.process.supplier.cms.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.msd.process.supplier.cms.ui/plugin.xml
@@ -2,6 +2,13 @@
 <?eclipse version="3.4"?>
 <plugin>
    <extension
+         id="net.openchrom.msd.process.supplier.cms.ui.fragment"
+         point="org.eclipse.e4.workbench.model">
+      <fragment
+            uri="fragment.e4xmi">
+      </fragment>
+   </extension>
+   <extension
          point="org.eclipse.ui.preferencePages">
       <page
       		category="org.eclipse.chemclipse.chromatogram.msd.process.ui.preferences.processPreferencePage"
