--- a/openchrom/plugins/net.openchrom.msd.converter.supplier.mgf/plugin.xml
+++ b/openchrom/plugins/net.openchrom.msd.converter.supplier.mgf/plugin.xml
@@ -10,6 +10,7 @@
             filterName="Mascot Generic Format (*.mgf)"
             id="org.eclipse.chemclipse.msd.converter.supplier.mgf"
             importConverter="net.openchrom.msd.converter.supplier.mgf.converter.MassSpectrumImportConverter"
+            importMagicNumberMatcher="net.openchrom.msd.converter.supplier.mgf.converter.MagicNumberMatcherChromatogram"
             isExportable="true"
             isImportable="true">
       </MassSpectrumSupplier>
@@ -23,7 +24,7 @@
             filterName="MGF Chromatogram (*.mgf)"
             id="net.openchrom.msd.converter.supplier.mgf"
             importConverter="net.openchrom.msd.converter.supplier.mgf.converter.ChromatogramImportConverter"
-            importMagicNumberMatcher="net.openchrom.msd.converter.supplier.mgf.converter.MagicNumberMatcher"
+            importMagicNumberMatcher="net.openchrom.msd.converter.supplier.mgf.converter.MagicNumberMatcherChromatogram"
             isExportable="true"
             isImportable="false">
       </ChromatogramSupplier>
