The mass spectrum converter magic number matcher have been added.

--- a/openchrom/plugins/net.openchrom.msd.converter.supplier.cms/plugin.xml
+++ b/openchrom/plugins/net.openchrom.msd.converter.supplier.cms/plugin.xml
@@ -10,6 +10,7 @@
             filterName="Calibrated Mass Spectra (*.CMS)"
             id="net.openchrom.msd.process.supplier.cms"
             importConverter="net.openchrom.msd.converter.supplier.cms.converter.MassSpectrumImportConverter"
+            importMagicNumberMatcher="net.openchrom.msd.converter.supplier.cms.converter.MagicNumberMatcherMassSpectrum"
             isExportable="true"
             isImportable="true">
       </MassSpectrumSupplier>
