--- a/openchrom/plugins/net.openchrom.chromatogram.msd.comparison.supplier.pbm/plugin.xml
+++ b/openchrom/plugins/net.openchrom.chromatogram.msd.comparison.supplier.pbm/plugin.xml
@@ -7,7 +7,10 @@
             comparatorName="PBM"
             description="This comparator calculates the similarity between two mass spectra with the pbm algorithm."
             id="net.openchrom.chromatogram.msd.comparison.supplier.pbm"
-            massSpectrumComparator="net.openchrom.chromatogram.msd.comparison.supplier.pbm.comparator.MassSpectrumComparator">
+            massSpectrumComparator="net.openchrom.chromatogram.msd.comparison.supplier.pbm.comparator.MassSpectrumComparator"
+            nominalMS="true"
+            tandemMS="false"
+            highResolutionMS="false">
       </ComparisonSupplier>
    </extension>
 
