Fix module path

--- a/openchrom/sites/pom.xml
+++ b/openchrom/sites/pom.xml
@@ -51,6 +51,6 @@
 	MODULES
   -->
   <modules>
-    <module>../openchrom.platform</module>
+    <module>openchrom.platform</module>
   </modules>
 </project>
