--- a/openchrom/pom.xml
+++ b/openchrom/pom.xml
@@ -93,22 +93,13 @@
         <artifactId>target-platform-configuration</artifactId>
         <version>${tycho.version}</version>
         <configuration>
-          <filters>
-            <filter>
-            <type>eclipse-plugin</type>
-            <id>org.eclipse.jdt.core</id>
-            <restrictTo>
-              <version>3.12.3.v20170228-1205</version>
-            </restrictTo>
-            </filter>
-            <filter>
-            <type>eclipse-plugin</type>
-            <id>com.ibm.icu</id>
-            <restrictTo>
-              <version>56.1.0.v201601250100</version>
-            </restrictTo>
-            </filter>
-          </filters>
+           <target>
+            <artifact>
+              <groupId>net.openchrom.releng </groupId>
+              <artifactId>openchrom.targetplatform </artifactId>
+              <version>1.0.0-SNAPSHOT </version>
+            </artifact>
+          </target>
           <environments>
             <environment>
               <os>linux</os>
