--- a/openchrom/features/pom.xml
+++ b/openchrom/features/pom.xml
@@ -52,5 +52,6 @@
   -->
   <modules>
   	<module>net.openchrom.platform.feature</module>
+  	<module>net.openchrom.jre.win32.win32.x86.feature</module>
   </modules>
 </project>
