--- a/openchrom/features/pom.xml
+++ b/openchrom/features/pom.xml
@@ -52,6 +52,8 @@
   -->
   <modules>
   	<module>net.openchrom.platform.feature</module>
+  	<module>net.openchrom.jre.feature</module>
   	<module>net.openchrom.jre.win32.win32.x86.feature</module>
+  	<module>net.openchrom.jre.win32.win32.x86_64.feature</module>
   </modules>
 </project>
