--- a/openchrom/features/pom.xml
+++ b/openchrom/features/pom.xml
@@ -55,5 +55,7 @@
   	<module>net.openchrom.jre.feature</module>
   	<module>net.openchrom.jre.win32.win32.x86.feature</module>
   	<module>net.openchrom.jre.win32.win32.x86_64.feature</module>
+  	<module>net.openchrom.jre.linux.gtk.x86.feature</module>
+  	<module>net.openchrom.jre.linux.gtk.x86_64.feature</module>
   </modules>
 </project>
