--- a/openchrom/features/pom.xml
+++ b/openchrom/features/pom.xml
@@ -57,5 +57,6 @@
   	<module>net.openchrom.jre.win32.win32.x86_64.feature</module>
   	<module>net.openchrom.jre.linux.gtk.x86.feature</module>
   	<module>net.openchrom.jre.linux.gtk.x86_64.feature</module>
+  	<module>net.openchrom.jre.macosx.cocoa.x86_64</module>
   </modules>
 </project>
