Fix the naming of the maxosx feature

--- a/openchrom/features/net.openchrom.jre.macosx.cocoa.x86_64.feature/.project
+++ b/openchrom/features/net.openchrom.jre.macosx.cocoa.x86_64.feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>net.openchrom.jre.macosx.cocoa.x86_64</name>
+	<name>net.openchrom.jre.macosx.cocoa.x86_64.feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
