--- a/openchrom/features/net.openchrom.jre.feature/pom.xml
+++ b/openchrom/features/net.openchrom.jre.feature/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>net.openchrom.releng</groupId>
     <artifactId>features</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
