--- a/openchrom/features/net.openchrom.jre.feature/pom.xml
+++ b/openchrom/features/net.openchrom.jre.feature/pom.xml
@@ -5,10 +5,11 @@
   <parent>
     <groupId>net.openchrom.releng</groupId>
     <artifactId>features</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
+  <version>1.0.0</version>
   <artifactId>net.openchrom.jre.feature</artifactId>
   <packaging>eclipse-feature</packaging>
     
