The cbi has been fixed.

--- a/openchrom/cbi/net.openchrom.swtchart.extension.export.vectorgraphics.cbi/pom.xml
+++ b/openchrom/cbi/net.openchrom.swtchart.extension.export.vectorgraphics.cbi/pom.xml
@@ -51,7 +51,7 @@
   -->
   <modules>
     <module>../../plugins/net.openchrom.swtchart.extension.export.vectorgraphics</module>
-    <module>../../features/net.openchrom.swtchart.extension.export.vectorgraphics</module>
+    <module>../../features/net.openchrom.swtchart.extension.export.vectorgraphics.feature</module>
 
   </modules>
 </project>
