--- a/openchrom/plugins/net.openchrom.msd.identifier.supplier.opentyper.ui/build.properties
+++ b/openchrom/plugins/net.openchrom.msd.identifier.supplier.opentyper.ui/build.properties
@@ -3,5 +3,6 @@ bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
                fragment.e4xmi,\
-               plugin.xml
+               plugin.xml,\
+               icons/
 source.. = src/
