--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates/plugin.xml
@@ -5,11 +5,24 @@
          point="org.eclipse.chemclipse.chromatogram.msd.peak.detector.peakDetectorSupplier">
       <PeakDetector
             description="This peak detector tries to detect peaks by using ranges from a template."
-            id="net.openchrom.xxd.process.supplier.templates.peaks"
+            id="net.openchrom.xxd.process.supplier.templates.peaks.msd"
             peakDetector="net.openchrom.xxd.process.supplier.templates.peaks.PeakDetectorMSD"
-            peakDetectorName="Template Peak Detector"
-            peakDetectorSettings="net.openchrom.xxd.process.supplier.templates.settings.PeakDetectorSettings">
+            peakDetectorName="Template Peak Detector (MSD)">
       </PeakDetector>
    </extension>
-
+   <extension
+         point="org.eclipse.chemclipse.chromatogram.csd.peak.detector.peakDetectorSupplier">
+      <PeakDetector
+            description="This peak detector tries to detect peaks by using ranges from a template."
+            id="net.openchrom.xxd.process.supplier.templates.peaks.csd"
+            peakDetector="net.openchrom.xxd.process.supplier.templates.peaks.PeakDetectorCSD"
+            peakDetectorName="Template Peak Detector (CSD)">
+      </PeakDetector>
+   </extension>   
+   <extension
+         point="org.eclipse.core.runtime.preferences">
+      <initializer
+            class="net.openchrom.xxd.process.supplier.templates.preferences.PreferenceInitializer">
+      </initializer>
+   </extension>
 </plugin>
