--- a/openchrom/pom.xml
+++ b/openchrom/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  Copyright (c) 2017, 2018 Lablicate GmbH.
+  Copyright (c) 2012, 2018 Lablicate GmbH.
 
   All rights reserved.
   This program and the accompanying materials are made available under the
@@ -41,24 +41,22 @@
     <tycho-repo.url>https://oss.sonatype.org/content/groups/public</tycho-repo.url>
     <neon-repo.url>http://download.eclipse.org/releases/neon</neon-repo.url>
     <neon-updates-repo.url>http://download.eclipse.org/eclipse/updates/4.6</neon-updates-repo.url>
+    <jetty-repo.url>http://download.eclipse.org/jetty/updates/jetty-bundles-8.x</jetty-repo.url>
+    <orbit-repo.url>http://download.eclipse.org/tools/orbit/downloads/drops/R20160520211859/repository</orbit-repo.url>
+    <nebula-repo.url>http://download.eclipse.org/nebula/snapshot</nebula-repo.url>
+    <pydev-repo.url>https://dl.bintray.com/fabioz/pydev/6.3.1</pydev-repo.url>
+    <nattable-repo.url>http://download.eclipse.org/nattable/releases/1.5.0/repository</nattable-repo.url>
+    <ease-repo.url>http://download.eclipse.org/ease/update/release</ease-repo.url>
+    <knime-repo.url>http://update.knime.org/analytics-platform/3.3</knime-repo.url>
+    <efxclipse-repo.url>http://download.eclipse.org/efxclipse/updates-released/2.4.0/site</efxclipse-repo.url>
+    <egit-repo.url>http://download.eclipse.org/egit/updates</egit-repo.url>
     <!-- ENCODING -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <!--
 	P2 REPOSITORIES
   -->
-  <repositories>
-    <repository>
-      <id>neon</id>
-      <url>${neon-repo.url}</url>
-      <layout>p2</layout>
-    </repository>
-    <repository>
-      <id>neon-updates</id>
-      <url>${neon-updates-repo.url}</url>
-      <layout>p2</layout>
-    </repository>
-  </repositories>
+  
   <!--
 	PLUGIN REPOSITORIES
   -->
@@ -99,22 +97,13 @@
         <artifactId>target-platform-configuration</artifactId>
         <version>${tycho.version}</version>
         <configuration>
-          <filters>
-            <filter>
-            <type>eclipse-plugin</type>
-            <id>org.eclipse.jdt.core</id>
-            <restrictTo>
-              <version>3.12.3.v20170228-1205</version>
-            </restrictTo>
-            </filter>
-            <filter>
-            <type>eclipse-plugin</type>
-            <id>com.ibm.icu</id>
-            <restrictTo>
-              <version>56.1.0.v201601250100</version>
-            </restrictTo>
-            </filter>
-          </filters>
+          <target>
+            <artifact>
+              <groupId>net.openchrom.releng </groupId>
+              <artifactId>openchrom.targetplatform </artifactId>
+              <version>1.0.0-SNAPSHOT </version>
+            </artifact>
+          </target>
           <environments>
             <environment>
               <os>linux</os>
