--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
@@ -3,20 +3,20 @@
    <extension
          point="org.eclipse.ui.preferencePages">
       <page
-            name="Template Processor"
-            category="org.eclipse.chemclipse.chromatogram.msd.process.ui.preferences.processPreferencePage"
-            class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PreferencePage"
-            id="net.openchrom.xxd.process.supplier.templates.ui.preferences.preferencePage">
+            name="Peak Detector Template"
+            category="org.eclipse.chemclipse.chromatogram.msd.peak.detector.ui.preferences.peakDetectorPreferencePage"
+            class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PagePeakDetector"
+            id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pagePeakDetector">
       </page>
       <page
-            name="Peak Detector List (MSD)"
-            category="net.openchrom.xxd.process.supplier.templates.ui.preferences.preferencePage"
+            name="MSD"
+            category="net.openchrom.xxd.process.supplier.templates.ui.preferences.pagePeakDetector"
             class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PagePeakDetectorMSD"
             id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pagePeakDetectorMSD">
       </page>
       <page
-            name="Peak Detector List (CSD)"
-            category="net.openchrom.xxd.process.supplier.templates.ui.preferences.preferencePage"
+            name="CSD"
+            category="net.openchrom.xxd.process.supplier.templates.ui.preferences.pagePeakDetector"
             class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PagePeakDetectorCSD"
             id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pagePeakDetectorCSD">
       </page>            
